GDCDashboard/src/edu/clarkson/gdc/workflow/param/ParamParser.java
/* ParamParser.java */
/* Generated By:JavaCC: Do not edit this line. ParamParser.java */
package edu.clarkson.gdc.workflow.param;

import java.util.List;
import java.util.ArrayList;

public class ParamParser implements ParamParserConstants {

  /** Main entry point. */
  public static void main(String args[]) throws ParseException {
    ParamParser parser = new ParamParser(System.in);
    parser.paramList();
  }

  final public List<Param> paramList() throws ParseException {Param p;
        List<Param> pl;
    p = param();
    pl = paramSection();
pl.add(0,p);
                {if ("" != null) return pl;}
    throw new Error("Missing return statement in function");
  }

  final public List<Param> paramSection() throws ParseException {Param p;
        List<Param> pl;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 10:{
      jj_consume_token(10);
      p = param();
      pl = paramSection();
pl.add(0,p);
                {if ("" != null) return pl;}
      break;
      }
    case 0:{
      jj_consume_token(0);
pl = new ArrayList<Param>();
                {if ("" != null) return pl;}
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Param param() throws ParseException {Param first, second = null;
    first = singleParam();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 11:{
      jj_consume_token(11);
      second = param();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
if(null == second)
                        {if ("" != null) return first;}
                {if ("" != null) return new OrParam(first, second);}
    throw new Error("Missing return statement in function");
  }

  final public Param singleParam() throws ParseException {String id;
        int num;
        Param first,second;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CONTEXT:{
      jj_consume_token(CONTEXT);
      jj_consume_token(12);
      id = id();
{if ("" != null) return new ContextParam(id);}
      break;
      }
    case INPUT:{
      jj_consume_token(INPUT);
      jj_consume_token(12);
      num = number();
{if ("" != null) return new InputParam(num);}
      break;
      }
    case RETURN:{
      jj_consume_token(RETURN);
      jj_consume_token(12);
      id = id();
{if ("" != null) return new ReturnParam(id);}
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public String id() throws ParseException {Token id;
    id = jj_consume_token(ID);
{if ("" != null) return id.image;}
    throw new Error("Missing return statement in function");
  }

  final public int number() throws ParseException {Token value;
    value = jj_consume_token(NUM);
{if ("" != null) return Integer.valueOf(value.image);}
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public ParamParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[3];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x401,0x800,0xe0,};
   }

  /** Constructor with InputStream. */
  public ParamParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public ParamParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ParamParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public ParamParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ParamParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public ParamParser(ParamParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ParamParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk_f() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[13];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 3; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 13; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
